...
      }
    },
    "Back/Forward" : {
      "comment" : "A label for the back/forward toolbar item.",
      "isCommentAutoGenerated" : true
    },
    "Cancel" : {
      "comment" : "A button that cancels an action.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Очистить"
          }
        }
      }
    },
    "Clear Menu" : {
      "comment" : "A button that clears the list of recently opened files.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Очистить меню"
          }
        }
      }
    },
    "Close" : {
      "comment" : "A button that closes the current window.",
      "isCommentAutoGenerated" : true
    },
    "Close All" : {
      "comment" : "A button that closes all open windows.",
      "isCommentAutoGenerated" : true
...
            "state" : "translated",
            "value" : "Открыть в редакторе"
          }
        }
      }
    },
    "Open Recent" : {
      "comment" : "A menu that opens recently-opened files.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Недавние"
          }
        }
      }
    },
    "Open…" : {
      "comment" : "A button that opens a file.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
...
      }
    },
    "Uses the template background color to paint the window toolbar and sidebar background. If the template does not have background color specified, we use the default OS color." : {
      "comment" : "A description of the transparent toolbar option.",
      "isCommentAutoGenerated" : true
    },
    "Welcome" : {
      "comment" : "The name of the welcome scene.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
...
